test/domains/compilerErrors/notsupportedEq-assoc-sparse.chpl
var DR: domain(1);
var SP: sparse subdomain(DR);
var DA: domain(int);

writeln(DA == SP);
